# skinwise-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  s3.py
config/: cnn.py  llm.py
docs/: API.md
routes/: analyze.py  classes.py  health.py  predict.py  root.py
src/: manage.py
src/diagnosis/: apps.py  pdf.py  services.py  urls.py  views.py
src/skinwise/: asgi.py  settings.py  urls.py  wsgi.py
src/templates/diagnosis/: analysis.html  base.html  index.html  pdf_analysis.html  pdf_results.html  results.html
utils/: analyzer.py  preprocess.py
